# delivery_monolith

./: .gitignore  .gitmodules  pyproject.toml  pytest.ini
delivery_sys/: manage.py
delivery_sys/delivery_sys/: asgi.py  settings.py  urls.py  wsgi.py
